- ds store deleted

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link href="/src/css/main.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Audio preload -->
+    <audio id="bgMusic" src="/static/sounds/lavendersoundtrack.mp3" preload="auto"></audio>
+
     <!-- Widget Container -->
     <div id="widgetContainer" class="relative w-full h-screen">
         <!-- Widgets will be dynamically inserted here -->
@@ -25,8 +28,6 @@
             </button>
         </div>
     </nav>
-        <!-- Widgets will be dynamically inserted here -->
-    </div>
 
     <script type="module" src="/src/js/main.js"></script>
 </body>
