--- a/public/results2.html
+++ b/public/results2.html
@@ -364,9 +364,9 @@
                 // Change next icon to filled version  
                 nextIcon.src = '/static/icons/nextfilled.svg';
                 
-                // Wait 2 seconds then redirect back to index
+                // Wait 2 seconds then redirect to VideoWidget3
                 setTimeout(() => {
-                    window.location.href = '/index.html';
+                    window.location.href = '/?widget=5';
                 }, 2000);
             }
         });
