before reset edits

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <!-- Audio preload -->
-    <audio id="bgMusic" src="/static/sounds/lavendersoundtrack.mp3" preload="auto"></audio>
+    <audio id="bgMusic" src="/static/sounds/lavendersoundtrack.mp3" preload="auto" loop></audio>
+    <audio id="politicalMusic" src="/static/sounds/politicalpartmusic.mp3" preload="auto" loop></audio>
 
     <!-- Widget Container -->
     <div id="widgetContainer" class="relative w-full h-screen">
